syntax = "proto3";
package reqres5;
// bai 5
message UserPartner{
    string id = 11;         
    string user_id = 1;        
    string partner_id = 3;       
    string alias_user_id = 5;     
    map<string, int64> apps = 6;
    string phone = 7;          
    int64 created = 10;         
    int64 updated_at = 12;       
}

message GetListRequest{}

message GetListResponse{}

message CreateUserRequest{}

message CreateUserResponse{}

message UpdateUserRequest{
    string user_id = 1;
}

message UpdateUserResponse{}

service UserPartnerService {
    // lay ve list UserPartner 
    rpc GetList(GetListRequest) returns (GetListResponse){};
    // tao 1 UserPartner
    rpc Create(CreateUserRequest) returns (CreateUserResponse){};
    // update UserPartner
    rpc Update(UpdateUserRequest) returns (UpdateUserResponse){};
}